--- a/duobaobao.html
+++ b/duobaobao.html
@@ -24,6 +24,14 @@
             color: red;
             font-size: 100px;
         }
+
+        #number {
+            position: fixed;
+            margin-top: 300px;
+            text-align: center;
+            width: 100%;
+        }
+
         #number2 {
             display: none;
         }
