--- a/duobaobao.html
+++ b/duobaobao.html
@@ -38,7 +38,7 @@
     </style>
 </head>
 <body>
-   <img id="icon" src="imgs/flower.gif">
+   <img id="icon" src="imgs/dance.gif">
    <p id="word">你是我家小呀小多宝,怎么爱你都不嫌多,吼吼吼</p>
    <p id="wait">spring,哈哈哈,再等5秒吧</p>
    <div id="number">4</div>
