--- a/duobaobao.html
+++ b/duobaobao.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>定时器</title>
+    <title>多宝快看啊</title>
     <style>
         body{
             background-color: black;
